--- a/frontend/src/pages/stylesheets/profilepage.css
+++ b/frontend/src/pages/stylesheets/profilepage.css
@@ -1,5 +1,5 @@
 /* center the content */
-#profile #display {
+#displayProfile {
   display: flex;
   justify-content: center;
   align-items: center;
