--- a/frontend/src/pages/stylesheets/register.css
+++ b/frontend/src/pages/stylesheets/register.css
@@ -1,5 +1,5 @@
 /* center the content */
-#register #display {
+#displayRegister {
   display: flex;
   justify-content: center;
   align-items: center;
